--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="ru.otus.otusdemo" >
+    package="ru.otus.otusdemo">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -9,21 +10,28 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".App"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OtusDemo"
-        tools:targetApi="31" >
+        tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:exported="false"
+            android:taskAffinity=".newTask"
+            android:name=".SecondActivity" />
+
+        <activity
             android:exported="true"
-            android:launchMode="standard">
+            android:configChanges="orientation|screenSize"
+            android:launchMode="standard"
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
