--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
             android:name=".SecondActivity" />
 
         <activity
+            android:exported="false"
+            android:taskAffinity=".newTask"
+            android:name=".ThirdActivity" />
+
+        <activity
             android:exported="true"
             android:configChanges="orientation|screenSize"
             android:launchMode="standard"
