add launch flag for second activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
 
         <activity
             android:exported="false"
+            android:launchMode="singleTask"
             android:taskAffinity=".newTask"
             android:name=".SecondActivity" />
 
