--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,19 +18,36 @@
 
         <!-- Открыть активити в новом таске можно  через флаг Intent FLAG_ACTIVITY_NEW_TASK или через launchMode="singleTask" -->
         <activity
-            android:exported="false"
-            android:launchMode="singleTask"
-            android:taskAffinity=".newTask"
-            android:name=".SecondActivity" />
-
-        <activity
-            android:exported="false"
-            android:taskAffinity=".newTask"
-            android:name=".ThirdActivity" />
-
-        <activity
             android:exported="true"
+            android:name=".SecondActivity">
+            <intent-filter>
+                <action android:name="OpenSecondActivity" />
+                <action android:name="android.intent.action.SENDTO" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="mailto" />
+            </intent-filter>
+
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.DIAL" />
+                <data android:scheme="tel" />
+            </intent-filter>
+
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <action android:name="android.intent.action.VIEW" />
+                <data
+                    android:host="otus.ru"
+                    android:pathPrefix="/app"
+                    android:scheme="https" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:configChanges="orientation|screenSize"
+            android:exported="true"
             android:launchMode="standard"
             android:name=".MainActivity">
             <intent-filter>
